# glim-humble-docker

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  docker-compose.yaml  pyproject.toml
docs/: go2-drive-activation-design.md  go2-ouster-glim-design.md  go2-ouster-ufw-rootcause.md  jetson-go2-dds-link-test.md  jetson-go2-drive-runbook.md  jetson-nav-run-order.md  jetson-phase3-handoff.md  jetson-phase3-nav-handoff.md
maps/: nav_check.rviz  pub_map.py
scripts/: go2_env.sh  install-deps.sh  net_setup_go2.sh
src/go2_bringup/: package.xml  setup.py
src/go2_bringup/config/dds/: cyclone_dds.xml
src/go2_bringup/config/joy/: ps4_teleop.yaml
src/go2_bringup/go2_bringup/: go2_sport_bridge.py
src/go2_bringup/launch/: go2_control.launch.py  robot_mapping.launch.py
src/go2_bringup/test/: test_sport_bridge.py
src/go2_glim_mapping/: README.md  package.xml  setup.cfg  setup.py
src/go2_glim_mapping/config/calib/: ouster_os1_32.yaml
src/go2_glim_mapping/config/glim/: config_ros.json  config_sensors.json
src/go2_glim_mapping/config/rviz/: mapping.rviz
src/go2_glim_mapping/go2_glim_mapping/: extrinsic.py  launch_config.py  map_saver.py  ply_to_pcd.py  pointcloud_io.py
src/go2_glim_mapping/launch/: mapping.launch.py  real_mapping.launch.py  sim_mapping.launch.py
src/go2_glim_mapping/sim/: room.world  sensor_bot.urdf
src/go2_glim_mapping/test/: test_extrinsic.py  test_launch_config.py
src/go2_glim_navigation/: package.xml  setup.cfg  setup.py
src/go2_glim_navigation/config/glim_loc/: config_sub_mapping_gpu.json
src/go2_glim_navigation/config/nav2/: nav2_params.yaml
src/go2_glim_navigation/config/rviz/: navigation.rviz
src/go2_glim_navigation/go2_glim_navigation/: nav_config.py  pcd_costmap.py
src/go2_glim_navigation/launch/: navigation.launch.py  real_navigation.launch.py  sim_navigation.launch.py
src/go2_glim_navigation/test/: test_nav_config.py  test_pcd_costmap.py
src/go2_rgb_odom_recorder/: README.md  package.xml  setup.cfg  setup.py
src/go2_rgb_odom_recorder/go2_rgb_odom_recorder/: bag_trim.py  pose_from_tf.py  pose_math.py
src/go2_rgb_odom_recorder/launch/: localization.launch.py  record.launch.py
src/go2_rgb_odom_recorder/rviz/: recorder.rviz
src/go2_rgb_odom_recorder/test/: test_bag_trim.py  test_pose_math.py
