<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for Go2 EDU + Ouster OS1-32 mapping session.
    PS4 joystick → cmd_vel → Go2 SportMode (unitree_api/Request via DDS), integrated with
    go2_glim_mapping/mapping.launch.py (mode:=real) into a single launch entry point.</description>
  <maintainer email="aswoo55555@gmail.com">SunoopDogg</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unitree_api</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>go2_glim_mapping</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
