<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_glim_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 autonomous navigation for the Go2 inside a prebuilt GLIM map
    (glim_localization + Nav2), sim-first. Launch + Nav2 config + localization glue.</description>
  <maintainer email="aswoo55555@gmail.com">SunoopDogg</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>go2_glim_mapping</exec_depend>
  <exec_depend>rko_lio</exec_depend>
  <exec_depend>icp_localization_ros2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
