<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_rgb_odom_recorder</name>
  <version>0.1.0</version>
  <description>Record RealSense D435i RGB + Go2 map-frame pose (x,y,theta) to rosbag2
    while teleop-driving inside a prebuilt GLIM map.</description>
  <maintainer email="aswoo55555@gmail.com">SunoopDogg</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>rko_lio</exec_depend>
  <exec_depend>icp_localization_ros2</exec_depend>
  <exec_depend>go2_glim_navigation</exec_depend>
  <exec_depend>go2_bringup</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
